# static-lit

./: .gitignore  CMakeLists.txt  README.md  lit  lit.cbp  main.lit  main.lua  test.lit  test.py
cli/: main.c  main.cpp
include/: README.md  lit.h  lit_bindings.h  lit_debug.h  lit_mem_manager.h  lit_predefines.h
include/cli/: lit_core.h
include/compiler/: lit_ast.h  lit_compiler.h  lit_emitter.h  lit_lexer.h  lit_parser.h  lit_resolver.h
include/std/: lit_std.h
include/util/: lit_array.h  lit_table.h
include/vm/: lit_chunk.h  lit_memory.h  lit_object.h  lit_opcode.h  lit_value.h  lit_vm.h
lit/src/: main.cpp
src/: lit_debug.c
src/cli/: lit_core.c  main.c
src/compiler/: lit_ast.c  lit_compiler.c  lit_emitter.c  lit_lexer.c  lit_parser.c  lit_resolver.c
src/std/: lit_std.c
src/util/: lit_array.c  lit_table.c
src/vm/: lit_chunk.c  lit_memory.c  lit_object.c  lit_value.c  lit_vm.c
test/: main.lit
test/expression/: assign.lit  binary.lit  call.lit  compound.lit  get.lit  grouping.lit  if.lit  lamda.lit  literal.lit  logical.lit  set.lit  super.lit  this.lit  unary.lit  var.lit
test/statement/: break.lit  class.lit  continue.lit  function.lit  if.lit  var.lit
vm/include/: chunk.hpp  common.hpp  compiler.hpp  config.hpp  debug.hpp  list.hpp  lit.h  lit.hpp  lit_array.h  lit_ast.h  lit_chunk.h  lit_chunk.hpp  lit_common.h  lit_common.hpp  lit_compiler.h  lit_compiler.hpp  lit_config.hpp  lit_context.hpp  lit_core.h  lit_debug.h  lit_debug.hpp  lit_emitter.h  lit_gc.hpp  lit_lexer.h  lit_lexer.hpp  lit_memory.h  lit_object.h  lit_object.hpp  lit_parser.h  lit_resolver.h  lit_table.h  lit_table.hpp  lit_value.h  lit_value.hpp  lit_vm.h  lit_vm.hpp  scanner.hpp  value.hpp  vm.hpp
vm/src/: chunk.cpp  common.cpp  debug.cpp  list.cpp  lit.cpp  lit_array.c  lit_ast.c  lit_chunk.c  lit_chunk.cpp  lit_common.cpp  lit_compiler.c  lit_compiler.cpp  lit_context.cpp  lit_core.c  lit_debug.c  (+19 more)
